fixing security vulnerability in the HelperDrawer

--- a/Clients/src/presentation/helpers/dashboard-help.html
+++ b/Clients/src/presentation/helpers/dashboard-help.html
@@ -1,15 +1,22 @@
 <div>
-  <p>Your central hub for monitoring AI governance activities, compliance status, and key metrics.</p>
-  
+  <p>
+    Your central hub for monitoring AI governance activities, compliance status,
+    and key metrics.
+  </p>
+
   <h3>Key Features</h3>
-  <p>1. View overall compliance status and risk metrics<br>
-  2. Monitor active projects and their assessment status<br>
-  3. Track vendor evaluations and performance<br>
-  4. Access quick links to common tasks</p>
+  <p>
+    1. View overall compliance status and risk metrics<br />
+    2. Monitor active projects and their assessment status<br />
+    3. Track vendor evaluations and performance<br />
+    4. Access quick links to common tasks
+  </p>
 
   <h3>Dashboard Sections</h3>
-  <p>1. Project Overview: View active projects and their status<br>
-  2. Risk Assessment: Monitor identified risks and mitigation progress<br>
-  3. Compliance Metrics: Track compliance scores and trends<br>
-  4. Recent Activities: See latest updates and changes</p>
+  <p>
+    1. Project Overview: View active projects and their status<br />
+    2. Risk Assessment: Monitor identified risks and mitigation progress<br />
+    3. Compliance Metrics: Track compliance scores and trends<br />
+    4. Recent Activities: See latest updates and changes
+  </p>
 </div>
