--- a/Clients/src/presentation/helpers/evidences-help.html
+++ b/Clients/src/presentation/helpers/evidences-help.html
@@ -1,9 +1,14 @@
 <div>
-  <p>This section allows you to store, organize, and manage all your uploaded documents and evidence files in one centralized location.</p>
-  
+  <p>
+    This section allows you to store, organize, and manage all your uploaded
+    documents and evidence files in one centralized location.
+  </p>
+
   <h3>Managing Files</h3>
-  <p>1. Use the project filter dropdown to view files from specific projects<br>
-  2. Click on file names to preview documents<br>
-  3. Use the action buttons to download or remove files<br>
-  4. Check the upload date and source information in the table columns</p>
+  <p>
+    1. Use the project filter dropdown to view files from specific projects<br />
+    2. Click on file names to preview documents<br />
+    3. Use the action buttons to download or remove files<br />
+    4. Check the upload date and source information in the table columns
+  </p>
 </div>
