--- a/Clients/src/presentation/helpers/reporting-help.html
+++ b/Clients/src/presentation/helpers/reporting-help.html
@@ -1,15 +1,21 @@
 <div>
-  <p>Generate and manage comprehensive reports for your AI governance activities.</p>
-  
+  <p>
+    Generate and manage comprehensive reports for your AI governance activities.
+  </p>
+
   <h3>Key Features</h3>
-  <p>1. Generate reports for different aspects of your AI system<br>
-  2. Export reports in various formats (PDF, CSV)<br>
-  3. Schedule automated report generation<br>
-  4. Track report history and versions</p>
+  <p>
+    1. Generate reports for different aspects of your AI system<br />
+    2. Export reports in various formats (PDF, CSV)<br />
+    3. Schedule automated report generation<br />
+    4. Track report history and versions
+  </p>
 
   <h3>How to Use</h3>
-  <p>1. Select report type from the available options<br>
-  2. Choose date range and filters<br>
-  3. Configure report parameters<br>
-  4. Click 'Generate Report' to create your report</p>
+  <p>
+    1. Select report type from the available options<br />
+    2. Choose date range and filters<br />
+    3. Configure report parameters<br />
+    4. Click 'Generate Report' to create your report
+  </p>
 </div>
