--- a/Clients/src/presentation/helpers/training-help.html
+++ b/Clients/src/presentation/helpers/training-help.html
@@ -1,15 +1,22 @@
 <div>
-  <p>Manage and track all AI-related training programs and certifications in your organization.</p>
-  
+  <p>
+    Manage and track all AI-related training programs and certifications in your
+    organization.
+  </p>
+
   <h3>Key Features</h3>
-  <p>1. Track employee training progress and completion status<br>
-  2. Manage training certifications and expiration dates<br>
-  3. Schedule and organize training sessions<br>
-  4. Generate training compliance reports</p>
+  <p>
+    1. Track employee training progress and completion status<br />
+    2. Manage training certifications and expiration dates<br />
+    3. Schedule and organize training sessions<br />
+    4. Generate training compliance reports
+  </p>
 
   <h3>How to Use</h3>
-  <p>1. Add new training programs using the 'Add Training' button<br>
-  2. Assign training to team members<br>
-  3. Monitor completion status in the training table<br>
-  4. Download certificates and training records</p>
+  <p>
+    1. Add new training programs using the 'Add Training' button<br />
+    2. Assign training to team members<br />
+    3. Monitor completion status in the training table<br />
+    4. Download certificates and training records
+  </p>
 </div>
